plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta13'
}

group = 'com.skillnoob.dh.benchmark'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.electronwill.night-config:toml:3.8.1'
    implementation 'com.github.oshi:oshi-core:6.8.1'
    implementation 'org.slf4j:slf4j-nop:2.0.17'
    implementation 'me.tongfei:progressbar:0.10.1'
}

java.toolchain {
    languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(21)
}

shadowJar {
    archiveClassifier.set('')
    manifest {
        attributes 'Main-Class': 'com.skillnoob.dh.benchmark.Main'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

build {
    dependsOn(shadowJar)
}